# GraspGen

./: .gitignore  install_uv_pointnet.sh  pyproject.toml
camera/: discovery.py  icp.py  pipeline.py  realsense.py  segmentation.py  visualization.py
config/: robot_T_w_r.json
kinova_gen3/: capture_and_grasp.py  convert_robotiq_2f140_to_2f85.py
kinova_gen3/camera/: calibrate.py  multi_calibrate.py  object_points.py  visualization.py  workspace.py
kinova_gen3/robot/: execute.py  gripper_kinematics.py  recordDemo.py  utilities.py
kinova_gen3/utilities/: convert_robotiq_2f140_to_2f85.py
scripts/: capture_and_collect.py  capture_and_grasp.py  demo_object_mesh.py  demo_object_pc.py  demo_workspace_grasp.py  extrinsic_calibrate.py  ply_to_demo_json.py  visualize_collection.py
