[build-system]
requires = ["setuptools>=45,<78", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp_gen"
version = "1.0.0"
description = "GraspGen: A Diffusion-based Framework for 6-DOF Grasping"
authors = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
maintainers = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
license = {text = "NVIDIA Corporation"}
readme = "README.md"
requires-python = ">=3.10,<3.12"  # spconv wheels only available for Python 3.10-3.11
keywords = ["robotics", "manipulation", "learning", "computer-vision", "grasping"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core PyTorch dependencies with CUDA 12.8 support (required for RTX 5080/Blackwell sm_120)
    # Pinned to 2.7.x to match available PyG pre-built wheels (pt27cu128)
    "torch>=2.7.0,<2.8.0",
    "torchvision>=0.22.0,<0.23.0",
    # PyTorch Geometric dependencies (installed from PyG wheel index)
    "torch-cluster",
    "torch-scatter",
    "torch-geometric",
    # Core dependencies from requirements.txt
    "h5py",
    "hydra-core",
    "matplotlib",
    "meshcat",
    "numpy>=1.26.4",
    "webdataset",
    "scikit-learn",
    "scipy",
    "tensorboard",
    "trimesh==4.5.3",
    "transformers",
    "tensordict",
    "diffusers>=0.11.1",
    "timm>=0.4.12",
    "huggingface-hub>=0.25.2",
    "PyOpenGL==3.1.0",
    "addict",
    "spconv-cu126",  # cu126 is compatible with CUDA 12.8
    "yapf==0.40.1",
    "tensorboardx",
    "sharedarray",
    "yourdfpy==0.0.56",
    # Additional dependencies from pip installation
    "pyrender",
    "scene-synthesizer[recommend]",
    "imageio",
    "pytest",
    "viser",
    # ZMQ serving
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
    # Pin setuptools to a version that still includes pkg_resources
    "setuptools>=45,<78",
    "kortex-api",
    "open3d>=0.19.0",
    "pyrealsense2>=2.58.2.10647",
    "sam3",
    "rerun-sdk>=0.23.1",
    "opencv-python>=4.11.0.86",
    "einops>=0.8.2",
    "pycocotools>=2.0.11",
    "hydra-zen>=0.16.1rc1",
]

# Note: pointnet2_ops is a local dependency that must be installed separately.
# For seamless installation, use: ./install_pointnet.sh
# Or manually: cd pointnet2_ops && uv pip install --no-build-isolation .

[project.urls]
"Homepage" = "https://graspgen.github.io"
"Repository" = "https://github.com/NVlabs/GraspGen"
"Documentation" = "https://graspgen.github.io"
"Paper" = "https://arxiv.org/abs/2507.13097"
"Models" = "https://huggingface.co/adithyamurali/GraspGenModels"
"Dataset" = "https://huggingface.co/datasets/nvidia/PhysicalAI-Robotics-GraspGen"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]
serve = [
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["grasp_gen*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live GraspGen server on localhost:5556",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
# Allow pre-release packages (needed for pyrender -> pyglet dependencies)
prerelease = "allow"

# Use find-links for PyG packages (flat HTML page, not a PEP 503 index)
find-links = [
    "https://data.pyg.org/whl/torch-2.7.0+cu128.html",
    "https://data.pyg.org/whl/torch-2.7.1+cu128.html",
]

# Configure PyTorch index for CUDA 12.8 wheels (required for RTX 5080/Blackwell)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Route torch packages to PyTorch CUDA 12.8 index
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
sam3 = { git = "https://github.com/shi00317/sam3.git", rev = "main" }
kortex-api = { url = "https://artifactory.kinovaapps.com/artifactory/generic-local-public/kortex/API/2.6.0/kortex_api-2.6.0.post3-py3-none-any.whl" }

# Build dependencies for packages that need special build requirements
[tool.uv.extra-build-dependencies]
sharedarray = ["setuptools>=45,<78"]
torch-scatter = ["torch"]
torch-cluster = ["torch"]
